--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -168,5 +168,20 @@
       "subject": "الموضوع",
       "msg": "الرسالة"
     }
+  },
+  "footer": {
+  "newsletter": {
+    "title": "النشره الإخباريه",
+    "desc": "اشترك في نشرتنا البريدية لتصلك آخر التحديثات، ورؤى الصناعة، وأبرز مشاريعنا، والعروض الحصرية مباشرة إلى بريدك"
+  },
+  "explore": {
+    "title": "استكشف"
+  },
+  "contact": {
+    "title": "معلومات التواصل"
   }
+},"copyrights": {
+    "rights": "جميع الحقوق محفوظة "
+  }
+
 }
