ya rab fok elde2a

--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -39,7 +39,7 @@
   },
   "about": {
     "company": "نحن شركة متخصصة في الهدم وأعمال الحفر",
-    "believe": "نؤمن أن البداية الصحيحة لأي مشروع تبدأ من الأساس",
+    "believe": "نؤمن أن البداية الصحيحة لأي مشروع تبدأ من الأرض",
     "desc": "بخبرة تمتد لسنوات في مواقع العمل، نقوم بهدم المباني وتجهيز مواقع البناء اعتمادًا على تخطيط دقيق وتنفيذ احترافي، لنقدّم لك أرضًا جاهزة لبناء رؤيتك",
     "quotes": {
       "first": "معايير عالية لجودة الهدم",
@@ -164,7 +164,7 @@
       "name": "اسمك",
       "email": "بريدك الإلكتروني",
       "phone": "رقم هاتفك",
-      "project": "مشروعك",
+      "project": "نوع مشروعك",
       "subject": "الموضوع",
       "msg": "الرسالة"
     }
