--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -163,7 +163,7 @@
       "name": "Your Name",
       "email": "Your Email",
       "phone": "Your Phone",
-      "project": "Your Project",
+      "project": "Your Project Type",
       "subject": "Subject",
       "msg": "Message"
     }
